--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react": "18.0.35",
     "@types/react-dom": "18.0.11",
     "@types/uuid": "^9.0.0",
+    "axios": "^1.3.6",
     "eslint": "8.38.0",
     "mathlive": "^0.92.0",
     "next": "^13.1.6",
@@ -27,5 +28,6 @@
   },
   "devDependencies": {
     "eslint-config-next": "^13.3.0"
-  }
+  },
+  "proxy": "http://localhost:3000"
 }
