--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/uuid": "^9.0.0",
     "axios": "^1.3.6",
     "eslint": "8.38.0",
+    "latex-parser": "^0.6.2",
     "latex-to-js": "^1.0.0",
     "mathlive": "^0.92.1",
     "next": "^13.1.6",
